2018-12-04 Massimo Manghi <mxmanghi@apache.org>
    * configure.ac: now inferring version number from VERSION

2018-12-01 Massimo Manghi <mxmanghi@apache.org>
	* cmake/CMakeList.txt: Update version number to 3.1.0. We have
	to figure out how to keep it update automatically

2018-11-28 Massimo Manghi <mxmanghi@apache.org>
    * : Released as 3.1.0

2018-11-24 Massimo Manghi <mxmanghi@apache.org>
    * .gitignore: update .gitignore

2018-11-23 Massimo Manghi <mxmanghi@apache.org>
    * : code branched as branch 3.1
    * configure.ac,VERSION: bumping to version 3.1.0

2018-11-20 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: add const specifier to variable definition

2018-11-18 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: stripping the namespace in the commands
    implemented by Rivet_Var (fixes bug #62926)
    * tests/post.test: add test to prevent the POST and GET arguments 
    crosstalk
    * tests/fqrivet_var.tcl: test fully qualified ::rivet::var[xxx] commands

2018-11-18 Massimo Manghi <mxmanghi@apache.org>
    * : version 3.0.3 released
    * doc/rivet.xml.in: print manual the full version in the cover page 

2018-11-04 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/xml.tcl: New ::rivet::xml command simplified and
    new construct for self closing elements
    * doc/xml/commands.xml: documenting new ::rivet::xml command 
    * tests/commands.[test|tcl]: add new test for commands that don't need
    their own test script
    * tests/runtest.tcl: Now is supposed to load 'prefork' by default

2018-11-02 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/: integrating changes done in the master branch. 
    Basically fully qualifying commands that need the ::rivet namespace

2018-08-07 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl: reflecting the changes in init.tcl.in 
    * doc/rivet.xml: removed subversion related keyword

2018-08-16 Massimo Manghi <mxmanghi@apache.org>