@@ -28,13 +28,13 @@ Compiling Rivet with cmake:
    in a known location (i.e. under Windows), you can speficy APACHE_ROOT:
 
    cmake -E make_directory build
-   cmake -E chdir build cmake -DAPACHE_ROOT=G:/Apache24 ..
+   cmake -E chdir build cmake -DAPACHE_ROOT=F:/Apache24 ..
    cmake --build build --config Release --target install
 
 5) Compile for 64 bits under Windows (for Visual Studio 2017):
 
    cmake -E make_directory build_64
-   cmake -E chdir build_64 cmake -DAPACHE_ROOT=G:/Apache24 -G "Visual Studio 15 2017 Win64" ..
+   cmake -E chdir build_64 cmake -DAPACHE_ROOT=F:/Apache24_64 -G "Visual Studio 15 2017 Win64" ..
    cmake --build build_64 --config Release --target install
 
    -G "..." can be set to any of the available 64-bit generators available under
@@ -43,7 +43,7 @@ Compiling Rivet with cmake:
 6) Specify Tcl at a non standard location:
 
    cmake -E make_directory build_64
-   cmake -E chdir build_64 cmake -DAPACHE_ROOT=G:/Apache24 -G "Visual Studio 15 2017 Win64" -Dwith-tcl=C:/TclApps/Tcl64/lib ..
+   cmake -E chdir build_64 cmake -DAPACHE_ROOT=F:/Apache24_64 -G "Visual Studio 15 2017 Win64" -Dwith-tcl=C:/TclApps/Tcl64/lib ..
    cmake --build build_64 --config Release --target install
 
    Instead of -Dwith-tcl=, -DTCL_ROOT=, -DTclStub_ROOT, and -DTCL_TCLSH= can be
